name:                haskell-obd
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/hverr/haskell-obd#readme
license:             BSD3
license-file:        LICENSE
author:              Henri Verroken
maintainer:          henriverroken@gmail.com
copyright:           2016 Henri Verroken
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Hardware.ELM327
                     , System.Hardware.ELM327.Commands
                     , System.Hardware.ELM327.Errors
  other-modules:       System.Hardware.ELM327.Utils.Hex
                     , System.Hardware.ELM327.Utils.Monad
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6 && < 0.11
                     , lens >= 4.13 && < 4.14
                     , serialport >= 0.4.7 && < 0.5
                     , split >= 0.2.3.1 && < 0.2.4
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

executable haskell-obd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , haskell-obd
  default-language:    Haskell2010

test-suite haskell-obd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-obd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hverr/haskell-obd
