name:                haskell-obd
version:             0.1.0.0
synopsis:            Communicate to OBD interfaces over ELM327
description:         Please see README.md
homepage:            https://github.com/hverr/haskell-obd#readme
license:             GPLv3
license-file:        LICENSE
author:              Henri Verroken
maintainer:          henriverroken@gmail.com
copyright:           2016 Henri Verroken
category:            Hardware
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.Hardware.ELM327
                     , System.Hardware.ELM327.Car
                     , System.Hardware.ELM327.Car.MAP
                     , System.Hardware.ELM327.Commands
                     , System.Hardware.ELM327.Connection
                     , System.Hardware.ELM327.Connection.OBD
                     , System.Hardware.ELM327.Errors
                     , System.Hardware.ELM327.OBD.Conversion
                     , System.Hardware.ELM327.Simulator
                     , System.Hardware.ELM327.Simulator.OBDBus
                     , System.Hardware.ELM327.Simulator.OBDBus.VWPolo2007
  other-modules:       System.Hardware.ELM327.Utils.Hex
                     , System.Hardware.ELM327.Utils.Monad
                     , System.Hardware.ELM327.Utils.Units
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6 && < 0.11
                     , dimensional >= 1.0.1.2 && < 1.2
                     , either >= 4.4.1.1 && < 4.5
                     , io-streams >= 1.3.5.0 && < 1.4
                     , lens >= 4.13 && < 4.14
                     , mtl >= 2.2.1 && < 2.3
                     , serialport >= 0.4.7 && < 0.5
                     , split >= 0.2.3.1 && < 0.2.4
                     , stm >= 2.4.4.1 && < 2.5
                     , stm-chans >= 3.0.0.4 && < 3.1
                     , transformers >= 0.4.2.0 && < 0.5
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable haskell-obd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , haskell-obd
  default-language:    Haskell2010

executable obd-terminal
  hs-source-dirs:      app
  main-is:             Terminal.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , haskell-obd
                     , bytestring >= 0.10.6 && < 0.11
                     , haskeline >= 0.7.2.3 && < 0.8
                     , mtl >= 2.2.1 && < 2.3
                     , optparse-applicative >= 0.12.1.0 && < 0.13
                     , transformers >= 0.4.2.0 && < 0.5
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite haskell-obd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-obd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hverr/haskell-obd
